Make sure search button dropdown options are visible in FF

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -100,6 +100,7 @@ body {
 
 /* split button drop down */
 .search-drop-down {
+  width: 100%;
   ul {
 	  input[type="submit"] {
 		  background: none;
